@@ -5,7 +5,6 @@ GOALS
 INSTALL
 INTERACTIVE
 KNOWN_BUGS
-MANIFEST
 MANIFEST.in
 Makefile
 README
